tests/diagnostics/file_roles/public_declarations/constant_in_test/expect.txt
# exit: 1
lib.test.coppice:1:8: error: public declarations are not allowed in .test.coppice files
  public ANSWER := 42
         ^
